--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 
 <html lang="en">
   <head>
+    <link rel="stylesheet" type="text/css" href="style.css" media="screen" />
     <meta charset="utf-8">
     <script type="text/javascript" src="./js/socket.io.js"></script>
     <script type="text/javascript" src="./client.js"></script>
